syntax = "proto3";
package trpc.cros.userApi;


message  Id {
  int32 id = 1;
}

// 用户信息
message UserInfo{
  int32 id = 1;
  string name = 2;
  string age = 3;
}

// 用户参数
message UserParams{
  string name = 1;
  int32 age = 2;
}

service UserApi {
  // 获取用户信息
  rpc GetUserInfo(Id) returns (UserInfo) {}

  // 保存用户
  rpc SaveUser(UserParams) returns (Id) {}

  rpc BatchSaveUser (stream UserParams) returns (stream Id) {
  }

}

